--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap');
+
+{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+:root{
+    font-size: 62,5% ; /*10px / 16px*/
+}
+header{
+    height: 100vh;
+    background-image: url('thiagosite.jpg');
+    background-size: cover;
+    color: #fff;
+    /* shorthand */
+    padding: 21rem 11rem
+
+}
+
 h1 {
     font-size: 3.75rem;
     font-weight: 700;
