--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,11 @@
     --collor-default:'#fff'
     collor-secundary: '#000'
 }
+
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     font-family: var(--font-default);
 }
@@ -114,7 +119,19 @@ section{
 
 .avatar{
     border-radius: 50%;
+    width: 500px;
     height: 500px;
+    animation: zoom 10s ease-in-out;
+}
+
+@keyframe zoom{
+0%{
+    transform scale(1.3);
+}
+100%{
+    transform scale(1);
+}
+    
 }
 
 #texto-apresentacao{
@@ -122,4 +139,46 @@ section{
     flex-direction: column;
     align-items: flex-start;
     gap: 2rem;
+}
+
+#secao-projetos{
+    background-color: black;
+    color: var(--collor-default);
+}
+
+#secao-projetos ul{
+    display: flex;
+    gap: 3rem;
+    justify-content: space-around;
+    list-style: none;
+}
+
+#secao-projetos li{
+    position: relative;
+}
+
+.card{
+    position: relative;
+}
+
+.card :hover .card-image{
+opacity: .2;
+bottom: 20%;
+}
+
+.card :hover .card-info{
+opacity: 1;
+}
+
+.card-image img{
+    height: 400px;
+    width: 300px;
+    border-radius: 10px;
+}
+
+.card-info{
+    position: absolute;
+    bottom: 0%;
+    opacity: 0;
+    transition: opacity .5s ease-in-out, bottom .5s;
 }
