--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,17 +119,17 @@ section{
 
 .avatar{
     border-radius: 50%;
-    width: 500px;
-    height: 500px;
-    animation: zoom 10s ease-in-out;
+    width: 400px;
+    height: 400px;
+    animation: zoom 2s ease-in-out;
 }
 
-@keyframe zoom{
+@keyframes zoom{
 0%{
-    transform scale(1.3);
+    transform: scale(1.3);
 }
 100%{
-    transform scale(1);
+    transform: scale(1);
 }
     
 }
@@ -153,21 +153,19 @@ section{
     list-style: none;
 }
 
-#secao-projetos li{
-    position: relative;
-}
-
 .card{
     position: relative;
+    cursor: pointer;
 }
 
-.card :hover .card-image{
+.card:hover .card-image{
 opacity: .2;
-bottom: 20%;
 }
 
-.card :hover .card-info{
+.card:hover .card-info{
 opacity: 1;
+bottom: 20%;
+color: #fff;
 }
 
 .card-image img{
