--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,61 @@ html{
     scroll-behavior: smooth;
 }
 
+#hamburguer{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    height: 3rem;
+    width: 3rem;
+    position: fixed;
+    top: 2rem;
+    right: 2rem;
+    cursor: pointer;
+    z-index: 11;
+}
+
+#hamburguer .linha{
+    width: 100%;
+    height: .5rem;
+    background-color: #FFF;
+    box-shadow: 0 .2rem .2rem #000;
+} 
+
+nav ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    position: fixed;
+    right: -20rem;
+    background-color: #4C4C4C;
+    height: 100vh;
+    width: 20rem;
+    z-index: 10;
+    transition: right 1s;
+}
+
+#menu li {
+    list-style: none;
+}
+
+#menu a{
+    font-family: Poppins;
+    font-weight: 600;
+    font-size: 2rem;
+    color: white;
+    text-shadow: 0 0.5rem 0.5rem #00000067;
+}
+
+#menu a:hover{
+    color: rgba(255, 255, 255, 0.60);
+}
+
+.menu-show{
+    right: 0;
+}
+
 body{
     font-family: var(--font-default);
 }
