--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@ h1, h2, h3{
 
 h1{
     font-family: var(--font-heading);
-    font-size: 6rem;
+    font-size: clamp(3rem,5vw,6rem);
     font-weight: 900;
     margin-bottom: 1rem;
     color:rgb(255, 255, 255);
@@ -282,4 +282,19 @@ input[type=number]{
     color: #fff;
     border: none;
     font-size: 1.5rem;
+}
+
+@media(max-width: 900px) {
+    #secao-projetos ul{
+      flex-direction: column;
+    
+    }
+    
+    .lager-only{
+        display: none;
+    }
+
+    #secao-orcamento form{
+        grid-template-columns: 1fr;
+    }
 }
